Header all sizes - dark

--- a/index.html
+++ b/index.html
@@ -51,11 +51,12 @@
           </ul>
         </nav>
         <h1 class="header_title">no focus</h1>
-        <p class="header_content">
-          <span class="header_content-line">Что делать, когда не можешь делать ничего</span>
-          <span class="header_content-line">Или почему нам так сложно сконцентрироваться, особенно когда очень надо</span>
-        </p>
-
+        <div class="header_container">
+          <p class="header_content">
+            <span class="header_content-line">Что делать, когда не можешь делать ничего</span>
+            <span class="header_content-line">Или почему нам так сложно сконцентрироваться, особенно когда очень надо</span>
+          </p>
+        </div>
     </header>
   </body>
 </html>
