Main and Footer after PP

--- a/index.html
+++ b/index.html
@@ -134,5 +134,11 @@
       </div>
     </main>
 
+    <footer class="footer decorated-zone">
+      <div class="decorated-corner decorated-corner_top-right uniq_corner-top-right" aria-hidden="true"></div>
+      <div class="decorated-corner decorated-corner_bottom-left uniq_corner-bottom-left" aria-hidden="true"></div>
+      <h1 class="header_title focus_footer">focus</h1>
+    </footer>
+
   </body>
 </html>
