--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
             <div class="container">
               <h3 class="scpecial_form">Многозадачность</h3>
-              <p class="post_content">Особенно сложно сосредоточиться, когда задач много и все они — важные. Где же легендарная многозадачность, когда она так нужна вам (и всем нанимающим менеджерам этого мира)? А дело в том, что её просто не существует. Исследователи выяснили, что мозгу тяжело концентрироваться даже на двух делах одновременно. А когда в поле внимания попадает несколько важных задач, организм паникует и выделяет кортизол и адреналин — «гормоны стресса». Из-за этого мы работаем невнимательно: ошибаемся и быстро устаём.</p>
+              <p class="post_content">Особенно сложно сосредоточиться, когда задач много и все они — важные. Где же легендарная многозадачность, когда она так нужна вам (и всем нанимающим менеджерам этого мира)? А дело в том, что её просто не существует. Исследователи <a href="https://dana.org/news-and-insights/" class="url-in-text">выяснили</a>, что мозгу тяжело концентрироваться даже на двух делах одновременно. А когда в поле внимания попадает несколько важных задач, организм паникует и выделяет кортизол и адреналин — «гормоны стресса». Из-за этого мы работаем невнимательно: ошибаемся и быстро устаём.</p>
             </div>
 
             <div class="container">
@@ -95,9 +95,8 @@
 
         <section class="content">
             <h2 class="section_title">Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)</h2>
-            <p class="scpecial_form">5 простых (на самом деле не очень) советов</p>
-
             <div class="container">
+              <p class="scpecial_form">5 простых (на самом деле не очень) советов</p>
               <h3 class="scpecial_form uniq">Представьте небо и облака</h3>
               <p class="post_content">Или листья в ручье. Тут дело в лёгкой медитации, которая помогает успокоиться. Ведь часто именно тревожные мысли о сложных задачах как раз и мешают эти сложные задачи делать. В такие моменты можно закрыть глаза и представить, что чистое небо — это вы, а облака — тревожные мысли. И сколько бы их ни было — ясное небо всегда будет где-то там, за тучами, и никуда не денется. Это упражнение поможет вернуться в настоящий момент, а не волноваться о потенциальных проблемах из будущего.</p>
             </div>
@@ -109,7 +108,7 @@
 
             <div class="container">
               <h3 class="scpecial_form uniq">Прогуляйтесь</h3>
-              <p class="post_content">Или даже пробегитесь. Лучше найти парк или лес: один эксперимент показал, что созерцание природы повышает концентрацию, в то время как после просмотра городских пейзажей она наоборот понижается. Можно совместить прогулку с физическими упражнениями или бегом — так в мозг поступит ещё больше кислорода и он будет лучше работать. Но и простая двадцатиминутная прогулка — тоже отличный вариант.</p>
+              <p class="post_content">Или даже пробегитесь. Лучше найти парк или лес: один эксперимент <a href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328" class="url-in-text">показал</a>, что созерцание природы повышает концентрацию, в то время как после просмотра городских пейзажей она наоборот понижается. Можно совместить прогулку с физическими упражнениями или бегом — так в мозг поступит ещё больше кислорода и он будет лучше работать. Но и простая двадцатиминутная прогулка — тоже отличный вариант.</p>
             </div>
 
             <div class="container">
@@ -120,24 +119,25 @@
             <div class="container">
               <h3 class="scpecial_form uniq">Читайте</h3>
               <p class="post_content">Настоящие бумажные книги. Это правда помогает с концентрацией: чтобы прочитать пост в соцсети, достаточно нескольких минут или даже секунд. А вот интересная книга способна затянуть и на несколько часов и круто тренирует направленное внимание.</p>
+            
             </div>
         </section>
 
         <section class="content_photos">
             <p class="scpecial_form">А можно в картинках?</p>
-            <img class="pictures sunset" src="./images/sunset.png" alt="Изображение закаты">
-            <img class="pictures ice-cream" src="./images/ice-cream.png" alt="Изображение мороженого">
-            <img class="pictures tape" src="./images/tape.png" alt="Изображение кассеты">
-            <img class="pictures books" src="./images/books.png" alt="Изображение книг">
-            <img class="pictures street" src="./images/street.png" alt="Изображение улицы">
+            <img class="pictures" loading="lazy" src="./images/sunset.png" alt="Изображение закаты">
+            <img class="pictures" loading="lazy"  src="./images/ice-cream.png" alt="Изображение мороженого">
+            <img class="pictures" loading="lazy"  src="./images/tape.png" alt="Изображение кассеты">
+            <img class="pictures" loading="lazy"  src="./images/books.png" alt="Изображение книг">
+            <img class="pictures" loading="lazy"  src="./images/street.png" alt="Изображение улицы">
         </section>
       </div>
     </main>
 
-    <footer class="footer decorated-zone">
+    <footer class="footer">
       <div class="decorated-corner decorated-corner_top-right uniq_corner-top-right" aria-hidden="true"></div>
       <div class="decorated-corner decorated-corner_bottom-left uniq_corner-bottom-left" aria-hidden="true"></div>
-      <h1 class="header_title focus_footer">focus</h1>
+      <h1 class="focus_footer">focus</h1>
     </footer>
 
   </body>
