--- a/index.html
+++ b/index.html
@@ -17,11 +17,8 @@
   </head>
   <body class="page">
     <header class="header decorated-zone">
-      <div class="decorated-corner decorated-corner_top-right" aria-hidden="true"></div>
-      <div class="decorated-corner decorated-corner_bottom-left" aria-hidden="true"></div>
       <div class="rec-indicator" aria-hidden="true">
         <span class="rec-indicator__text">REC</span>
-        <span class="rec-indicator__dot"></span>
       </div>
 
         <nav class="header__theme-menu">
@@ -52,7 +49,7 @@
         </nav>
         <h1 class="header_title">no focus</h1>
         <div class="header_container">
-          <p class="scpecial_form">
+          <p class="title-decor">
             <span class="header_content-line">Что делать, когда не можешь делать ничего</span>
             <span class="header_content-line">Или почему нам так сложно сконцентрироваться, особенно когда очень надо</span>
           </p>
@@ -63,68 +60,67 @@
         <section class="content">
             <h2 class="section_title">Почему сосредоточиться так сложно</h2>
 
-            <div class="container">
-              <h3 class="scpecial_form">Многозадачность</h3>
+            <article class="container customize-for-large">
+              <h3 class="title-decor customize-for-large">Многозадачность</h3>
               <p class="post_content">Особенно сложно сосредоточиться, когда задач много и все они — важные. Где же легендарная многозадачность, когда она так нужна вам (и всем нанимающим менеджерам этого мира)? А дело в том, что её просто не существует. Исследователи <a href="https://dana.org/news-and-insights/" class="url-in-text">выяснили</a>, что мозгу тяжело концентрироваться даже на двух делах одновременно. А когда в поле внимания попадает несколько важных задач, организм паникует и выделяет кортизол и адреналин — «гормоны стресса». Из-за этого мы работаем невнимательно: ошибаемся и быстро устаём.</p>
-            </div>
+            </article>
 
-            <div class="container">
-              <h3 class="scpecial_form">Дофамин</h3>
+            <article class="container customize-for-large">
+              <h3 class="title-decor customize-for-large">Дофамин</h3>
               <p class="post_content">С гормонами стресса всё понятно, но дальше — ещё интереснее. В нашей невозможности сосредоточиться замешана и полная противоположность стрессу — дофамин. Это вещество участвует в системе вознаграждения мозга. Причём тут он? Мы часто отвлекаемся от важной задачи на что-то более «приятное» для мозгов. Например, смотрим лайки в соцсетях. В это время и выделяется дофамин — и мы чувствуем удовольствие. Получается замкнутый круг: чем больше отвлекаешься, тем больше удовольствия получаешь.</p>
-            </div>
+            </article>
         </section>
 
-        <section class="content">
+        <section class="content big-content">
             <h2 class="section_title">Что снижает концентрацию внимания?</h2>
 
-            <div class="container">
-              <h3 class="scpecial_form">Многозадачность</h3>
+            <article class="container customize-for-medium">
+              <h3 class="title-decor customize-for-medium">Многозадачность</h3>
               <p class="post_content">Как концентрация может снижаться из-за… концентрации? Любая стрессовая ситуация (и резко меняющийся мир в целом) заставляет наш мозг постоянно «сканировать» окружающую среду на предмет опасности. Например, читать новости вместо работы. Но быть собранными всё время — невозможно. Концентрация — мышца, и она может не выдержать, если не давать ей отдохнуть.</p>
-            </div>
+            </article>
 
-            <div class="container">
-              <h3 class="scpecial_form">Еда</h3>
+            <article class="container customize-for-medium">
+              <h3 class="title-decor customize-for-medium">Еда</h3>
               <p class="post_content">«Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно доставляют в мозг энергию и помогают ему лучше работать. Но уходит эта энергия также быстро, как и приходит. А мы в результате попадаем на «углеводные качели»: как только действие «быстрых углеводов» заканчивается, мы чувствуем усталость и сонливость. И хотим ещё больше быстрых углеводов.</p>
-            </div>
+            </article>
 
-            <div class="container">
-              <h3 class="scpecial_form">Гаджеты</h3>
+            <article class="container customize-for-medium">
+              <h3 class="title-decor customize-for-medium">Гаджеты</h3>
               <p class="post_content">Да-да, это та самая ситуация, когда на экране ноутбука — код, в наушниках — подкаст, а на компьютере фоном — ещё и видео с забавными утятами. В результате мозг пытается переключиться с одной задачи на другую — и просто не может. А чтобы вернуться к состоянию полной концентрации, человеку в среднем нужно 20 минут. Вот и получается, что чем больше времени мы проводим в гаджетах, тем больше времени затем нужно, чтобы вернуться к работе.</p>
-            </div>
+            </article>
         </section>
 
         <section class="content">
             <h2 class="section_title">Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)</h2>
-            <div class="container">
-              <p class="scpecial_form">5 простых (на самом деле не очень) советов</p>
-              <h3 class="scpecial_form uniq">Представьте небо и облака</h3>
+            <article class="container customize-for-large">
+              <h3 class="title-decor title-decor--spaced customize-for-large">5 простых (на самом деле не очень) советов</h3>
+              <h4 class="title-decor uniq customize-for-large">Представьте небо и облака</h4>
               <p class="post_content">Или листья в ручье. Тут дело в лёгкой медитации, которая помогает успокоиться. Ведь часто именно тревожные мысли о сложных задачах как раз и мешают эти сложные задачи делать. В такие моменты можно закрыть глаза и представить, что чистое небо — это вы, а облака — тревожные мысли. И сколько бы их ни было — ясное небо всегда будет где-то там, за тучами, и никуда не денется. Это упражнение поможет вернуться в настоящий момент, а не волноваться о потенциальных проблемах из будущего.</p>
-            </div>
+            </article>
             
-            <div class="container">
-              <h3 class="scpecial_form uniq">Включите музыку</h3>
+            <article class="container customize-for-large">
+              <h4 class="title-decor uniq customize-for-large">Включите музыку</h4>
               <p class="post_content">Но не любую, и не любимую. Любимая может быть связана с сильными положительными эмоциями, которые тоже очень сильно отвлекают. Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще попробовать включить плейлист с «белым шумом» или нейромузыкой.</p>
-            </div>
+            </article>
 
-            <div class="container">
-              <h3 class="scpecial_form uniq">Прогуляйтесь</h3>
+            <article class="container customize-for-large">
+              <h4 class="title-decor uniq customize-for-large">Прогуляйтесь</h4>
               <p class="post_content">Или даже пробегитесь. Лучше найти парк или лес: один эксперимент <a href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328" class="url-in-text">показал</a>, что созерцание природы повышает концентрацию, в то время как после просмотра городских пейзажей она наоборот понижается. Можно совместить прогулку с физическими упражнениями или бегом — так в мозг поступит ещё больше кислорода и он будет лучше работать. Но и простая двадцатиминутная прогулка — тоже отличный вариант.</p>
-            </div>
+            </article>
 
-            <div class="container">
-              <h3 class="scpecial_form uniq">Хорошо ешьте</h3>
+            <article class="container customize-for-large">
+              <h4 class="title-decor uniq customize-for-large">Хорошо ешьте</h4>
               <p class="post_content">Мы — не ваша бабушка, но это правда важно. Выбирайте продукты, которые препятствуют резким скачкам сахара в крови. Например, с высоким содержанием клетчатки: овощи, ягоды, бобовые (нут, чечевица, фасоль), коричневый рис, хлеб из цельнозерновой пшеницы.</p>
-            </div>
+            </article>
 
-            <div class="container">
-              <h3 class="scpecial_form uniq">Читайте</h3>
+            <article class="container customize-for-large">
+              <h4 class="title-decor uniq customize-for-large">Читайте</h4>
               <p class="post_content">Настоящие бумажные книги. Это правда помогает с концентрацией: чтобы прочитать пост в соцсети, достаточно нескольких минут или даже секунд. А вот интересная книга способна затянуть и на несколько часов и круто тренирует направленное внимание.</p>
-            
-            </div>
+            </article>
         </section>
 
         <section class="content_photos">
-            <p class="scpecial_form">А можно в картинках?</p>
+            <h2 class="title-decor customize-for-large">А можно в картинках?</h2>
             <img class="pictures" loading="lazy" src="./images/sunset.png" alt="Изображение закаты">
             <img class="pictures" loading="lazy"  src="./images/ice-cream.png" alt="Изображение мороженого">
             <img class="pictures" loading="lazy"  src="./images/tape.png" alt="Изображение кассеты">
@@ -134,10 +130,8 @@
       </div>
     </main>
 
-    <footer class="footer">
-      <div class="decorated-corner decorated-corner_top-right uniq_corner-top-right" aria-hidden="true"></div>
-      <div class="decorated-corner decorated-corner_bottom-left uniq_corner-bottom-left" aria-hidden="true"></div>
-      <h1 class="focus_footer">focus</h1>
+    <footer class="footer decorated-zone">
+      <h2 class="focus_footer">focus</h2>
     </footer>
 
   </body>
