--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             </article>
         </section>
 
-        <section class="content">
+        <section class="content big-padding">
             <h2 class="section_title">Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)</h2>
             <article class="container customize-for-large">
               <h3 class="title-decor title-decor--spaced customize-for-large">5 простых (на самом деле не очень) советов</h3>
